# fpga-gpu

./: README.md
gateware/: README.md  pyproject.toml  top.py
gateware/board/: ebaz4205.py
gateware/tests/: test_axifb.py  test_dma.py  test_wb_cdc.py  utils.py
gateware/tests/rasterizer/: test_buffer_clearer.py  test_command_processor.py  test_edge_walker.py  test_pixel_writer.py  test_rasterizer.py  test_rasterizer_texture.py  test_texture_buffer.py  utils.py
gateware/zynq_gpu/: axi_to_wishbone.py  axifb.py  dma.py  ps7.py  wb_cdc.py  zynq_ifaces.py
gateware/zynq_gpu/hdmi/: __init__.py  framebuffer.py  phy.py  tmds_encoder.py  tx.py
gateware/zynq_gpu/rasterizer/: __init__.py  buffer_clearer.py  command_processor.py  edge_walker.py  pixel_writer.py  rasterizer_pipelined.py  rasterizer_sequential.py  texture_buffer.py  types.py
gateware/zynq_gpu/soc/: __init__.py  hdmi_fb.py  peripheral.py  raster.py
gateware/zynq_gpu/utils/: __init__.py  div.py
linux/: Makefile  README.md  gpu_device_tree.dts  kernel_config  original_device_tree.dts  shell.nix
linux/cubes_demo/: Cargo.toml  rust-toolchain.toml
linux/cubes_demo/.cargo/: config.toml
linux/cubes_demo/src/: main.rs
linux/driver/: Kbuild  cont_dma_buf.c  cont_dma_buf.h  userdma.h  userdma_main.c
linux/hell/: README.md
linux/hell/gl/: __init__.py  command.py  common.py  hw.py
linux/hell/hal/: __init__.py  alloc.py  display_controller.py  dmabuf.py  mmio.py  rasterizer.py  uio.py
linux/umd/: Cargo.toml
linux/umd/src/: lib.rs
linux/umd/src/gl/: command.rs  common.rs  hw.rs  mod.rs  sw.rs  texture_buffer.rs
linux/umd/src/hal/: alloc.rs  display_controller.rs  dma_buf.rs  mod.rs  rasterizer.rs  uio.rs
