[package]
name = "umd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.14.0"
glam = { version = "0.24", default-features = true, features = ["debug-glam-assert"] }
libc = "0.2.149"
mycelium-bitfield = "0.1.3"
tokio = { version = "1.33.0", features = ["full"] }
